add button shadow and border style change

--- a/src/components/navbar/navbar.style.css
+++ b/src/components/navbar/navbar.style.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .btn-primary {
-    @apply py-3 px-5 mx-7 my-1 bg-[#edf2fb] border-b-4;
+    @apply py-3 px-5 mx-7 my-1 bg-[#edf2fb] border-t-2;
     border-image: linear-gradient(45deg, purple, orange) 1;
   }
 }
