--- a/src/components/hero/hero.style.css
+++ b/src/components/hero/hero.style.css
@@ -4,13 +4,15 @@
 
 @layer components {
   .btn-primary {
-    @apply py-3 px-5 mx-7 my-1 bg-[#edf2fb] border-l-2;
-    border-image: linear-gradient(45deg, purple, orange) 1;
+    @apply py-3 px-5 mx-7 my-1 bg-[#edf2fb] border-l-[3px] border-t-[3px];
+    border-image: linear-gradient(45deg, #0e0725, #5c03bc, #e536ab, #1a2766) 1;
   }
   .hero-img {
-    
-    box-shadow: rgba(10, 147, 150, 0.4) 7px 7px,
+    box-shadow : rgba(10, 147, 150, 0.2) 5px 5px,
+      rgba(10, 147, 150, 0.15) 10px 10px, rgba(10, 147, 150, 0.1) 15px 15px,
+      rgba(10, 147, 150, 0.05) 20px 20px, rgba(10, 147, 150, 0.01) 25px 25px;
+    /* box-shadow: rgba(10, 147, 150, 0.4) 7px 7px,
       rgba(10, 147, 150, 0.3) 15px 15px, rgba(10, 147, 150, 0.2) 20px 20px,
-      rgba(10, 147, 150, 0.1) 25px 25px, rgba(10, 147, 150, 0.05) 30px 30px;
+      rgba(10, 147, 150, 0.1) 25px 25px, rgba(10, 147, 150, 0.05) 30px 30px; */
   }
 }
