--- a/src/App.css
+++ b/src/App.css
@@ -10,13 +10,24 @@
         #0e0725,
         #5c03bc,
         #1a2766,
-        #0a1647,
         #1a2766,
-        #e536ab,
-        #074170,
         #ae1b1e,
+        #074170,
         #121b67
       )
       1;
   }
+}
+body::-webkit-scrollbar {
+  width: 1em;
+  background-color:#1f2937 ;
+}
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: #374151;
+  border-radius : 100px;
 }
